align left and fix spelling error

--- a/src/style.css
+++ b/src/style.css
@@ -17,7 +17,7 @@
 .map-container {
   position: absolute;
   top: 50%;
-  left: 16%;
+  left: 1%;
 }
 
 .city-name {
